--- a/Front-end/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Front-end/app/src/main/res/values-zh-rCN/strings.xml
@@ -115,4 +115,5 @@
     <string name="UI_delete">删除</string>
     <string name="UI_no_question">第%d题没有题目。</string>
     <string name="UI_too_few_choices">第%d题选项不足2个。</string>
+    <string name="UI_check_delete_module">你确定要删除这个单元：%s吗？</string>
 </resources>
