--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <!--    general usage-->
     <string name="BACKUP_GET_URL" translatable="false">http://193.122.108.23:7070/</string>
     <string name="GET_URL" translatable="false">http://quizzical.canadacentral.cloudapp.azure.com/</string>
+    <string name="PROFILE_IMAGE_END_POINT" translatable="false">profileImg</string>
+    <string name="USER_END_POINT" translatable="false">user</string>
+    <string name="NOTIFICATION_END_POINT" translatable="false">notifications</string>
+    <string name="CLASS_END_POINT" translatable="false">class</string>
+    <string name="STATS_ENDPOINT" translatable="false">stats</string>
+    <string name="QUIZ_ENDPOINT" translatable="false">quiz</string>
     <string name="QUIZ_URL" translatable="false"><![CDATA[http://quizzical.canadacentral.cloudapp.azure.com/quiz?classCode=%d&quizCode=%d]]></string>
     <string name="TYPE" translatable="false">type=</string>
 
