--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="DELETE_QUIZ" translatable="false">deleteQuiz</string>
     <string name="LIKE_ENDPOINT" translatable="false">/like</string>
     <string name="INSTRUCTOR_LEADERBOARD_ENDPOINT" translatable="false">instructorLeaderboard</string>
+    <string name="STUDENT_LEADERBOARD_ENDPOINT" translatable="false">studentLeaderboard</string>
 
     <string name="NO_VALUE_JSON" translatable="false">[]</string>
 
@@ -168,7 +169,7 @@
 
     <string name="AVERAGE" translatable="false">Average</string>
     <string name="HIGHEST" translatable="false">Highest</string>
-    <string name="SCORE" translatable="false">Score</string>
+    <string name="SCORE" translatable="false">score</string>
 
     <string name="UI_create_module_notification">Please create a module before creating a quiz</string>
     <string name="UI_correct_answer">correct answer</string>
