--- a/Front-end/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Front-end/app/src/main/res/values-zh-rCN/strings.xml
@@ -97,7 +97,7 @@
     <string name="UI_wrong_questions">错题集</string>
     <string name="UI_stats">班级数据</string>
     <string name="UI_notes">笔记</string>
-    <string name="UI_stats_string">平均：%.2f\\\\n最高分：%.2f\\\\n您的分数：%.2f</string>
+    <string name="UI_personal_score_string">您的分数：%.2f</string>
     <string name="UI_enter_module_name">请输入单元名称</string>
     <string name="UI_create_new_module">创建一个新的单元</string>
     <string name="UI_invalid_module_name">单元名无效</string>
