Added back press check for quizzes

--- a/Front-end/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Front-end/app/src/main/res/values-zh-rCN/strings.xml
@@ -119,4 +119,6 @@
     <string name="UI_do_you_like_the_quiz">你喜欢这个测试吗？</string>
     <string name="UI_highest_score_text">最高分：%.2f</string>
     <string name="UI_average_score_text">平均分：%.2f</string>
+    <string name="UI_quit_quiz_editing_warning">你确定要放弃这个测试的创建吗？所有的数据将被删除。</string>
+    <string name="UI_quit_quiz_warning">你确定要退出这次测试吗？所有的数据将不会被记录。</string>
 </resources>
